--- a/src/pages/slider/slider.scss
+++ b/src/pages/slider/slider.scss
@@ -94,21 +94,8 @@ page-slider {
         color: white;
     }
 
-    // Get Started Button
-    // .getStartedButton {
-    //     background:none;
-    //     font-size: 18px;
-    //     border-style: solid;
-    //     border-width: 2px;
-    //     border-color:white;
-    //     color: white;
-    //     position: absolute;
-    //     bottom:2.5%;
-    //     left:33%;
-        
-    // }
-
-    .getStartedButton{
+    // Lets Go Button
+    #letsGoButton {
         background:none;
         font-size: 18px;
         border-style: solid;
