--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -4,7 +4,7 @@ page-login {
         font-family: roboto;
     }
 
-    .display {
+    .displayLogo {
         width: 310px;
         height: 240px;
         background-color: #F7F8FF;
@@ -12,6 +12,10 @@ page-login {
         margin-left: auto;
         margin-right: auto;
 
+    }
+
+    button {
+        width: 153px;
     }
 
     #display-btn{
@@ -23,11 +27,26 @@ page-login {
 
     #login-btn {
         background-color: #292975;
-        width: 153px;
     }
 
     #signup-btn {
         background-color: #000000;
-        width: 153px;
+    }
+
+    .instruction {
+        width: 343px;
+        height: 197px;
+        background-color: transparent;
+        position: absolute;
+        bottom: -1%;
+        right: 0%;
+    }
+
+    .div-btm {
+        height: 42px;
+        position: absolute;
+        bottom: 0%;
+        width: 100%;
+        background-color: #E5EAFF;
     }
 }
