--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -5,13 +5,12 @@ page-login {
     }
 
     .displayLogo {
-        width: 310px;
-        height: 250px;
+        width: 260px;
+        height: 200px;
         background-color: #F7F8FF;
         display: block;
         margin-left: auto;
         margin-right: auto;
-
     }
 
     .icon-color {
@@ -44,6 +43,19 @@ page-login {
         position: absolute;
         bottom: 0%;
         right: 0%;
+    }
+
+    .center {
+        text-align: center;
+        padding-top: 3%;
+    }
+
+    .lostPassword-btn {
+        background:none;
+        border:none;
+        font-size: 18px;
+        font-weight: 300;
+        color: #9E9E9E;
     }
 
     .div-btm {
