--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -69,4 +69,15 @@ page-login {
     .input-color {
         background-color: #F7F8FF;
     }
+
+    .ilist {
+        width: 35%;
+        min-width: 320px;
+    }
+
+    .center1 {
+        margin-left: auto;
+        margin-right: auto;
+        width: 360px;
+    }
 }
