--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -1,3 +1,19 @@
 page-register {
 
+    .instruction {
+        width: 350px;
+        height: 185px;
+        background-color: transparent;
+        position: absolute;
+        bottom: 0%;
+        right: 0%;
+    }
+
+    .div-btm {
+        height: 42px;
+        position: absolute;
+        bottom: 0%;
+        width: 100%;
+        background-color: #E5EAFF;
+    }
 }
