--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -12,10 +12,22 @@ page-login {
         margin-left: auto;
         margin-right: auto;
     }
-
+    
     .icon-color {
         color: #b9b9bb;
     }
+
+    .text-input::-moz-placeholder {
+        color: #D6D4D4;
+      }
+      
+      .text-input:-ms-input-placeholder {
+        color: #D6D4D4;
+      }
+      
+      .text-input::-webkit-input-placeholder {
+        color: #D6D4D4;
+      }
 
     button {
         width: 153px;
@@ -26,14 +38,17 @@ page-login {
         margin-left: auto;
         margin-right: auto;
         text-align: center;
+        
     }
 
     #login-btn {
         background-color: #292975;
+        font-weight: bold;
     }
 
     #signup-btn {
         background-color: #000000;
+        font-weight: bold;
     }
 
     .instruction {
@@ -56,6 +71,7 @@ page-login {
         font-size: 18px;
         font-weight: 300;
         color: #9E9E9E;
+        font-weight: bold;
     }
 
     .div-btm {
