--- a/src/pages/lost-password/lost-password.scss
+++ b/src/pages/lost-password/lost-password.scss
@@ -1,3 +1,102 @@
 page-lost-password {
+    // body content
+    #body {
+        background-color: #F7F8FF;
+        font-family: roboto-bold;
+    }
 
+    // Logo
+    .displayLogo {
+        width: 260px;
+        height: 200px;
+        background-color: #F7F8FF;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 5%;
+    }
+
+    // lost password text description
+    .textDescription {
+        text-align: center;
+        font-size: 18px;
+        font-weight: bold;
+        color: #A3A2A2;
+    }
+
+    // field text centered 
+    .ilist {
+        width: 35%;
+        min-width: 346px;
+    }
+
+    .center1 {
+        margin-left: auto;
+        margin-right: auto;
+        width: 360px;
+    }
+
+    // Placeholder text field color
+    .text-input {
+        font-weight: bold;
+        font-size: 18px;
+        background-color: #F7F8FF;
+    }
+
+    .text-input::-moz-placeholder {
+        color: #D6D4D4;
+      }
+      
+      .text-input:-ms-input-placeholder {
+        color: #D6D4D4;
+      }
+      
+      .text-input::-webkit-input-placeholder {
+        color: #D6D4D4;
+      }
+
+    // all button
+    button {
+        width: 348px;
+        position: absolute;
+        bottom: 30px;
+
+    }
+
+    //send button
+    #send-btn {
+        background-color: #6363C9;
+        font-weight: bold;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    // back button
+    #back-btn {
+        background-color: #8C8C9C;
+        margin-left: auto;
+        margin-right: auto;
+        font-weight: bold;
+        display: block;
+    }
+
+    // Instruction Picture
+    .instruction {
+        width: 350px;
+        height: 185px;
+        background-color: transparent;
+        position: absolute;
+        bottom: 0%;
+        left: 0%;
+    }
+
+    // coloured div box bottom
+    .div-btm {
+        height: 42px;
+        position: absolute;
+        bottom: 0%;
+        width: 100%;
+        background-color: #E5EAFF;
+    }
 }
