slider text font bold

--- a/src/pages/slider/slider.scss
+++ b/src/pages/slider/slider.scss
@@ -80,6 +80,7 @@ page-slider {
         font-size: 18px;
         font-weight: 300;
         color: white;
+        font-weight: bold;
     }
 
     // Next Button
@@ -92,6 +93,7 @@ page-slider {
         font-size: 18px;
         font-weight: 300;
         color: white;
+        font-weight: bold;
     }
 
     // Lets Go Button
@@ -107,6 +109,7 @@ page-slider {
         width: 100px;
         margin-left: -50px;
         bottom:2%;
+        font-weight: bold;
     
     }
 }
