--- a/src/pages/tabs/tabs.scss
+++ b/src/pages/tabs/tabs.scss
@@ -1,3 +1,28 @@
 page-tabs {
-    
+    .tabbar {
+        a.tab-button[aria-selected=true]:nth-of-type(1) {
+            color: grey;
+            .tab-button-icon {
+                color: #292975;
+            }
+        }
+        a.tab-button[aria-selected=true]:nth-of-type(2) {
+            color: grey;
+            .tab-button-icon {
+                color: #292975;
+            }
+        }
+        a.tab-button[aria-selected=true]:nth-of-type(3) {
+            color: grey;
+            .tab-button-icon {
+                color: #292975;
+            }
+        }
+        a.tab-button[aria-selected=true]:nth-of-type(4) {
+            color: grey;
+            .tab-button-icon {
+                color: #292975;
+            }
+        }
+    }
 }
