--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,16 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+.toolbar-background {
+    background-color: #031030;
+}
+
+.toolbar-title-md{
+    color: #59D9C2;
+    font-family: quicksand;
+}
+.toolbar-title-ios{
+    color: #59D9C2;
+    font-family: Quicksand;
+}
