--- a/src/pages/account/account.scss
+++ b/src/pages/account/account.scss
@@ -4,6 +4,10 @@ page-account {
         font-family: quicksand;
     }
 
+    #body {
+        background-color: #F7F8FF;
+    }
+
     #titleCenter {
         text-align: center;
     }
