--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,11 +5,28 @@ height: 140px;
 width: 400px;
 
 }    
-img{
+.img{
 height: 120px;
 width: 400px;
 }
+.small{
+    height: 100px;
+    width: 100px;
+}
+// .slide-small{
+//     height: 100px;
+//     width: 100px;
+// }
 
+.segment{
+    background-color: #35478C;
+    height: 40px;
+    color: #F7F8FF;
+    vertical-align:middle;
+    font-weight: bold;
+    font-size: 20px;
+    text-align: center;
+}
 
 
 
