account BG color update

--- a/src/pages/account/account.scss
+++ b/src/pages/account/account.scss
@@ -13,7 +13,7 @@ page-account {
     }
 
     #profileBGcolor {
-        background-color: #222222;
+        background-color: #241F30;
         position: absolute;
         top: 1%;
         width: 100%;
@@ -39,7 +39,7 @@ page-account {
     #userProfileImage {
         width: 151px;
         height: 142px;
-        background-color: #222222;
+        background-color: #241F30;
     }
 
     #settingHeader {
