--- a/src/pages/item/item.scss
+++ b/src/pages/item/item.scss
@@ -1,7 +1,8 @@
-page-home {
+page-item {
 
+    
 ion-slides.slides {
-    height: 160px;
+    height: 330px;
 }
       
 .swiper-pagination {
@@ -13,10 +14,10 @@ ion-slides.slides {
 height: 120px;
 width: 400px;
 }
-.small{
-    height: 100px;
-    width: 100px;
-    border-radius: 20px;
+.big{
+    height: 330px;
+    width: 330px;
+
 }
 .slide-small{
    padding-left: 0%;
@@ -27,19 +28,20 @@ width: 400px;
 
 .segment{
     background-color: #35478C;
-    height: 40px;
-    width: 500px;
+
     color: #F7F8FF;
     vertical-align:middle;
     font-weight: bold;
     font-size: 17px;
     display: table-cell;
     padding: 10px;
+   
     
 }
 .graydiv{
     background-clip: #E5E5E5;
     padding-left: 0%;
+    margin-top: 30px;
 }
 .item-desc{
     position: fixed;
@@ -48,4 +50,7 @@ width: 400px;
 
 
 }
+
+
+
 
