--- a/src/pages/categories/categories.scss
+++ b/src/pages/categories/categories.scss
@@ -48,4 +48,10 @@ page-categories {
         border: solid 1px #e6e6e6  !important;
         height: 40px;
     }
+
+    ion-slides {
+        height: auto;
+      }
+
+      
 }
