--- a/src/pages/cart/cart.scss
+++ b/src/pages/cart/cart.scss
@@ -1,3 +1,12 @@
 page-cart {
 
+    #total{
+        text-align: right;
+        
+    }
+    .icon{
+        width: 10px;
+        height: 10px;
+    }
+
 }
